update package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "zendesk/zendesk",
+    "name": "zookal/zendesk",
     "license": "OSL-3.0",
     "type": "magento-module",
     "description": "Zendesk Extension for Magento",
